@startuml

title __WIDGETS's Class Diagram__\n

  namespace com.aaron.yespdf {
    namespace common {
      namespace widgets {
        class com.aaron.yespdf.common.widgets.BorderImageView {
            {static} - BORDER_COLOR : int
            {static} - BORDER_RADIUS : float
            - drawBorder : boolean
            - mBorderColor : int
            - mBorderRadius : float
            - mPaint : Paint
            + BorderImageView()
            + BorderImageView()
            + clearBorder()
            + getBorderColor()
            + getBorderRadius()
            + isDrawBorder()
            + setBorderColor()
            + setBorderRadius()
            # onDraw()
            - init()
        }
      }
    }
  }
  

  namespace com.aaron.yespdf {
    namespace common {
      namespace widgets {
        class com.aaron.yespdf.common.widgets.ImageTextView {
            - mDrawFlag : int
            - mIconBottom : Drawable
            - mIconBottomHeight : int
            - mIconBottomTint : int
            - mIconBottomWidth : int
            - mIconLeft : Drawable
            - mIconLeftHeight : int
            - mIconLeftTint : int
            - mIconLeftWidth : int
            - mIconRight : Drawable
            - mIconRightHeight : int
            - mIconRightTint : int
            - mIconRightWidth : int
            - mIconTop : Drawable
            - mIconTopHeight : int
            - mIconTopTint : int
            - mIconTopWidth : int
            + ImageTextView()
            + ImageTextView()
            + ImageTextView()
            + getIconBottom()
            + getIconBottomHeight()
            + getIconBottomTint()
            + getIconBottomWidth()
            + getIconLeft()
            + getIconLeftHeight()
            + getIconLeftTint()
            + getIconLeftWidth()
            + getIconRight()
            + getIconRightHeight()
            + getIconRightTint()
            + getIconRightWidth()
            + getIconTop()
            + getIconTopHeight()
            + getIconTopTint()
            + getIconTopWidth()
            + setIconBottom()
            + setIconBottom()
            + setIconBottomHeight()
            + setIconBottomTint()
            + setIconBottomWidth()
            + setIconLeft()
            + setIconLeft()
            + setIconLeftHeight()
            + setIconLeftTint()
            + setIconLeftWidth()
            + setIconRight()
            + setIconRight()
            + setIconRightHeight()
            + setIconRightTint()
            + setIconRightWidth()
            + setIconTop()
            + setIconTop()
            + setIconTopHeight()
            + setIconTopTint()
            + setIconTopWidth()
            # onDraw()
            - init()
            - setIconSize()
        }
      }
    }
  }
  

  namespace com.aaron.yespdf {
    namespace common {
      namespace widgets {
        class com.aaron.yespdf.common.widgets.NewViewPager {
            - mScrollable : boolean
            + NewViewPager()
            + NewViewPager()
            + onInterceptTouchEvent()
            + onTouchEvent()
            + setScrollable()
        }
      }
    }
  }
  

  com.aaron.yespdf.common.widgets.BorderImageView -up-|> android.widget.ImageView
  com.aaron.yespdf.common.widgets.ImageTextView -up-|> android.widget.TextView
  com.aaron.yespdf.common.widgets.NewViewPager -up-|> androidx.viewpager.widget.ViewPager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
